# anki-copycat-importer

./: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  addon.json  ankiapp_exporter.py  ankiapp_importer.py  ankiconnect.py  ankiweb_page.html  dprint.json  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  technical.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  create_release.yml  install_deps.sh
.vscode.dist/: extensions.json  launch.json  settings.json
designer/: algoapp.ui  ankiapp.ui  ankipro.ui  dialog.ui  noji.ui
docs/: book.toml
docs/src/: SUMMARY.md  algoapp.md  intro.md  noji.md  support.md
requirements/: base.txt  bundle.in  bundle.txt  dev.in  dev.txt
src/: .version  __init__.py  ankiapp_importer.py  appdata.py  config.json  config.md  config.py  config.schema.json  consts.py  errors.py  log.py  main.py  manifest.json  menu.py
src/gui/: dialog.py  help.py  importer.py  web.py
src/gui/widgets/: __init__.py  algoapp.py  ankiapp.py  ankipro.py  noji.py  widget.py
src/importers/: __init__.py  algoapp.py  ankiapp.py  ankipro.py  errors.py  httpclient.py  importer.py  noji.py  utils.py
tests/: fixtures.py  test_ankiapp.py  test_example.py
tests/data/: simple.db
ts/: package-lock.json  package.json
